hphp/hack/test/typecheck/inout/inout_pipe_expression.php.exp
WARN: File "inout_pipe_expression.php", line 5, characters 21-22:
Indexing into a value of type `dynamic` (Warn[12040])
  File "inout_pipe_expression.php", line 3, characters 23-29:
  This expression has type `dynamic`
WARN: File "inout_pipe_expression.php", line 8, characters 22-23:
Indexing into a value of type `dynamic` (Warn[12040])
  File "inout_pipe_expression.php", line 3, characters 23-29:
  This expression has type `dynamic`
ERROR: File "inout_pipe_expression.php", line 8, characters 22-23:
You cannot use this syntax with `inout`. (Parsing[1002])
